Resolved java warnings