@@ -37,7 +37,7 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Karl Dahlgren
@@ -75,9 +75,9 @@ public class DeleteRestApplicationServiceTest {
         final RestMockResponse mockResponse = RestMockResponseTestBuilder.builder().build();
 
         Mockito.when(applicationRepository.delete(Mockito.any())).thenReturn(application);
-        Mockito.when(resourceRepository.findWithApplicationId(applicationId)).thenReturn(Arrays.asList(resource));
-        Mockito.when(methodRepository.findWithResourceId(resource.getId())).thenReturn(Arrays.asList(method));
-        Mockito.when(mockResponseRepository.findWithMethodId(method.getId())).thenReturn(Arrays.asList(mockResponse));
+        Mockito.when(resourceRepository.findWithApplicationId(applicationId)).thenReturn(List.of(resource));
+        Mockito.when(methodRepository.findWithResourceId(resource.getId())).thenReturn(List.of(method));
+        Mockito.when(mockResponseRepository.findWithMethodId(method.getId())).thenReturn(List.of(mockResponse));
 
         final DeleteRestApplicationInput input = DeleteRestApplicationInput.builder()
                 .restProjectId(projectId)
